--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="TUNACOIN">
     <meta name="author" content="TUNACOIN">
-    <link rel="icon" href="https://tunacoinnet.github.io/css/BITSBR-LOGO-MINI-2.jpg">
+    <link rel="icon" href="https://tunacoinnet.github.io/css/ICO-TUNACOIN.png">
 
     <title>TUNACOIN BLOCKCHAIN</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
@@ -61,7 +61,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <img width="150" src="https://tunacoinnet.github.io/css/ico-tunacoin.jpg" />
+        <img width="150" src="https://tunacoinnet.github.io/css/ICO-TUNACOIN.png" />
         <p class="lead">Blockchain</p>
       </div>
 
