--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 </div>
 <script src="https://ipfs.io/ipfs/QmVvNwVXecuvQtKxwPuL1L58UPh9EYDU5iQSLjeN3S2sto/jquery-3.2.1.min.js"></script>
 <script src="https://ipfs.io/ipfs/QmPEJx9Bur2NNDPtBNT5zQ6bBnCkgYtKeNBAWRXx4j5hf2/js/bootstrap.min.js"></script>
-<script src="https://bitsbr.github.io/base58/jsbn.js"></script>
-<script src="https://bitsbr.github.io/base58/jsbn2.js"></script>
-<script src="https://bitsbr.github.io/base58/base58.js"></script>
+<script src="https://tunacoinnet.github.io/base58/jsbn.js"></script>
+<script src="https://tunacoinnet.github.io/base58/jsbn2.js"></script>
+<script src="https://tunacoinnet.github.io/base58/base58.js"></script>
 <script type="text/javascript">
 function to_hex(s) {
     var r = '';
