--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <div class="starter-template">
         <img width="150" src="https://tunacoinnet.github.io/css/ICO-TUNACOIN.png" />
-        <p class="lead">Blockchain</p>
+        <p class="lead">TUNA Blockchain</p>
       </div>
 
       
